# Rust-Based-OS

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.ps1  rust-toolchain.toml
.cargo/: config.toml
docs/: ARCHITECTURE.md
src/: lib.rs  main.rs  serial.rs
src/agent/: mod.rs
src/fs/: mod.rs
src/interrupts/: mod.rs
src/ipc/: mod.rs
src/logging/: audit.rs  mod.rs
src/memory/: heap.rs  mod.rs
src/scheduler/: mod.rs
src/security/: mod.rs
src/services/: mod.rs
src/shell/: commands.rs  mod.rs
src/syscall/: mod.rs
src/vga/: mod.rs
